# data-collections-API

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  coding_style.md  contributing.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  question.md  testing.md
.github/workflows/: docs.yml  lint.yml  python-publish.yml  test.yml
data_collections/: __init__.py  invenio.py
data_collections/cli/: record_upload.py
data_collections_api/: __init__.py  __main__.py  base_schema.py  cli.py  dumpers.py  invenio.py  metadata.py  schema.py
data_collections_api/cli/: __init__.py  data_collections_main.py  record_upload.py
data_collections_api/examples/: bare_example.yml
data_collections_api/schemas/: __init__.py  base.py
docs/source/: cli.rst  conf.py  index.rst  schema.rst
docs/source/api/: data_collections_api.cli.rst  data_collections_api.rst  data_collections_api.schemas.rst  modules.rst
docs/source/deposition_tutorial/: index.rst
docs/source/schemas/: base.md  index.rst
docs/source/scripts/: __init__.py  schema_gen.py
examples/: biosim_record.yaml
notebooks/deposition_tutorial/: record.yaml  tutorial.ipynb
tests/: test_send.py
