[project]
name = "data-collections"
# version = "0.1.0"
description = "API for depositing and retrieving from PSDI data collections repository"
authors = [
    { name = "Elliott Kasoar" },
    { name = "Jacob Wilkins" },
    { name = "Jas Kalayan" },
    { name = "Alin M. Elena" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["psdi", "invenio", "zenodo"]
dynamic = ["version"]


dependencies = ["requests"]

[project.optional-dependencies]
ruamel = ["ruamel.yaml>=0.17.22"]
yaml = ["pyYAML>=3.13"]
docs = ["sphinx>=0.13.1", "sphinx-book-theme>=0.3.3", "sphinx-autodoc-typehints"]

lint = ["ruff"]
test = ["pytest==8.3.4", "pytest-cov==5.0.0"]


[project.urls]
Homepage="https://github.com/PSDI-UK/data-collections-API"
# Documentation = ""
Repository="https://github.com/PSDI-UK/data-collections-API.git"
"Bug Tracker" = "https://github.com/PSDI-UK/data-collections-API/issues"

[tool.setuptools.dynamic]
version = {attr = "data_collections.__version__"}



[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".#*",
    "__pycache__",
    "test",
    "conf.py",
    "*ipynb"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
select = [
    "PL", # Pylint errors
    "E",   # Pycodestyle
    "W",   # Pycodestyle warnings
    "F",   # Pyflakes
    "B",   # Flake8 bugbear
    "SIM", # Flake8 Simplify
    "A",   # Flake8 builtins
    "COM", # Flake8 commas
    "ISC", # Flake8 implicit string concat
    "RSE", # Flake8 raise
    "FA",  # Flake8 future
    "FBT", # Flake8 boolean trap
    "C4",  # Flake8 comprehensions
    "Q",   # Flake8 Quotes
    "RET", # Flake8 return
    "ARG", # Flake8 unused args
    "PTH", # Flake8 use pathlib
    "I",   # Isort
    "RUF", # Ruff specific
    "FURB",# Refurb
    "PERF",# Perflint
    "D",   # Pydocstyle
    "UP",  # Pyupgrade
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLW2901",  # For loop variable overwritten
    "PLR2004",  # Magic constant value
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
    "PR04", # Ignore no type (types come from signature as via sphinx_autodoc_typehints)
]
# Don't report on objects that match any of these regex
exclude = [
    ".__weakref__$",
    ".__repr__$",
]
