[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-collections-api"
description = "API for depositing and retrieving from PSDI data collections repository"
authors = [
    { name = "Elliott Kasoar" },
    { name = "Jacob Wilkins" },
    { name = "Jas Kalayan" },
    { name = "Alin M. Elena" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["psdi", "invenio", "zenodo"]
dynamic = ["version"]


dependencies = [
  "requests",
  "schema"
]

[project.optional-dependencies]
ruamel = ["ruamel.yaml>=0.17.22"]
yaml = ["pyYAML>=3.13"]
docs = [
   "sphinx>=8.2",
   "sphinxcontrib-contentui<1.0.0,>=0.2.5",
   "furo==2025.9.25",
   "numpydoc>=1.9.0",
   "myst-parser",
   "jsonschema-markdown",
]
lint = ["pre-commit<5.0.0,>=4.2.0", "ruff==0.13.3", "numpydoc>=0.19.0"]
test = ["pytest==8.3.4", "pytest-cov==5.0.0"]

[project.urls]
Homepage="https://github.com/PSDI-UK/data-collections-API"
Documentation = "https://PSDI-UK.github.io/data-collections-API"
Repository="https://github.com/PSDI-UK/data-collections-API.git"
"Bug Tracker" = "https://github.com/PSDI-UK/data-collections-API/issues"

[project.scripts]
data_collections = "data_collections_api.cli.data_collections_main:main"
upload_record = "data_collections_api.cli.record_upload:cli"

[tool.setuptools.dynamic]
version = {attr = "data_collections_api.__version__"}

[tool.ruff]
line-length = 100
indent-width = 4

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".#*",
    "__pycache__",
    "test",
    "conf.py",
    "*ipynb"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
select = [
    "PL", # Pylint errors
    "E",   # Pycodestyle
    "W",   # Pycodestyle warnings
    "F",   # Pyflakes
    "B",   # Flake8 bugbear
    "SIM", # Flake8 Simplify
    "A",   # Flake8 builtins
    "COM", # Flake8 commas
    "ISC", # Flake8 implicit string concat
    "RSE", # Flake8 raise
    "FA",  # Flake8 future
    "FBT", # Flake8 boolean trap
    "C4",  # Flake8 comprehensions
    "Q",   # Flake8 Quotes
    "RET", # Flake8 return
    "ARG", # Flake8 unused args
    "PTH", # Flake8 use pathlib
    "I",   # Isort
    "RUF", # Ruff specific
    "FURB",# Refurb
    "PERF",# Perflint
    "D",   # Pydocstyle
    "UP",  # Pyupgrade
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "COM812",   # Trailing comma
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
    "PR04", # Ignore no type (types come from signature as via sphinx_autodoc_typehints)
]
# Don't report on objects that match any of these regex
exclude = [
    '\._$',
    '\.__init__$',
]
